k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: go-with-me
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: registry.digitalocean.com/go-with-me-dev/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: go-with-me
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
